Fixed the promotions getting obscured by the product imagery due to not having a z-index in the 'material' theme

--- a/app/assets/stylesheets/themes/material.scss
+++ b/app/assets/stylesheets/themes/material.scss
@@ -1028,6 +1028,7 @@ $material-easing: cubic-bezier(0.4, 0.0, 0.2, 1) !default;
 /* Promotions positioned outside the static product-meta */
 .product-meta .promotions {
   position: absolute;
+  z-index: 1;
   top: 20px;
   right: $grid-gutter-width/2;
 
